syntax = "proto3";

package myproto;

import "api/rpc/status.proto";

service Ustaad {
  rpc GetImage (GetImageRequest) returns (GetImageResponse);
}

message GetImageRequest {
  string id = 1;
}

message GetImageResponse {
  rpc.Status status = 1;
  string id = 2;
}
